--- a/app/src/main/res/layout/activity_list_birthday.xml
+++ b/app/src/main/res/layout/activity_list_birthday.xml
@@ -6,12 +6,19 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.microsoft.o365_android_microsoft_graph_snippets.ListBirthdayActivity">
 
-    <TextView android:id="@+id/textView" android:text="Birthdays Today" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView android:id="@+id/textView1" android:text="Select Contact you wish to send Video Greeting!!" android:layout_width="wrap_content"
+    <TextView android:id="@+id/textView"
+        android:text="Birthdays Today"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"/>
+        android:textSize="24sp"
+        android:gravity="center"/>
+
+    <TextView android:id="@+id/textView1"
+        android:text="Select Contact you wish to send Video Greeting!!"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:textSize="18sp"/>
 
     <ListView
         android:id="@+id/birthdayListView"
