--- a/app/src/main/res/layout/fragment_snippet_detail.xml
+++ b/app/src/main/res/layout/fragment_snippet_detail.xml
@@ -12,9 +12,11 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1">
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:weightSum="1"
+
+            android:visibility="invisible">
 
             <TextView
                 android:id="@+id/txt_hyperlink"
@@ -43,7 +45,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:indeterminateOnly="true"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <!-- Spinner with Page, Notebook, or Section chooser-->
         <Spinner
@@ -66,21 +68,24 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:freezesText="true"
-            android:text="@string/fragment_snippet_textview_description" />
+            android:text="@string/fragment_snippet_textview_description"
+            android:visibility="invisible" />
 
         <TextView
             style="@style/detail_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:freezesText="true"
-            android:text="@string/req_url" />
+            android:text="@string/req_url"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/txt_request_url"
             style="@style/detail_rect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:freezesText="true" />
+            android:freezesText="true"
+            android:visibility="invisible" />
 
         <TextView
             android:layout_width="match_parent"
@@ -88,13 +93,15 @@
             android:layout_marginTop="5dp"
             android:freezesText="true"
             android:gravity="center"
-            android:text="@string/response" />
+            android:text="@string/response"
+            android:visibility="invisible"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="invisible">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -133,11 +140,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:freezesText="true"
+            android:visibility="invisible"
             android:text="@string/response_headers" />
 
         <TextView
             android:id="@+id/txt_response_headers"
             style="@style/detail_rect"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:freezesText="true" />
@@ -147,11 +156,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:freezesText="true"
+            android:visibility="invisible"
             android:text="@string/response_body" />
 
         <TextView
             android:id="@+id/txt_response_body"
             style="@style/detail_rect"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:freezesText="true" />
